--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,1 +1,8 @@
+streamlit==1.24.0
+google-auth==2.19.0
+google-auth-oauthlib==0.7.2
+google-auth-httplib2==0.1.0
+google-api-python-client==2.79.0
+pinecone-client==2.0.0
+requests==2.28.2
 
